--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,11 @@ __pycache__/
 *$py.class
 
 .sqlite3
+.sqlite3-journal
 .db
+db.sqlite3
+db.sqlite3-journal
+.db3
 
 # C extensions
 *.so
@@ -21,6 +25,8 @@ build/
 develop-eggs/
 dist/
 downloads/
+media/
+data/
 eggs/
 .eggs/
 lib/
@@ -66,9 +72,8 @@ coverage.xml
 
 # Django stuff:
 *.log
+.log
 local_settings.py
-db.sqlite3
-db.sqlite3-journal
 
 # Flask stuff:
 instance/
